force-app/main/default/objects/ZipCodeLatAndLong__c/ZipCodeLatAndLong__c.object-meta.xml
<CustomObject>
    <description>This is the base table of zip codes that is loaded from a purchased file from USPS</description>
    <label>ZipCodeLatAndLong</label>
    <nameField>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZipCodeLatAndLong</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>