force-app/main/default/objects/ZipCodeLatAndLong__c/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <description>This stores the Area Code.</description>
    <label>Area Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>