force-app/main/default/objects/ZipCodeLatAndLong__c/fields/AreaCodeUSPS__c.field-meta.xml
<CustomField>
    <fullName>AreaCodeUSPS__c</fullName>
    <description>USPS file:The telephone area codes available in this ZIP Code.</description>
    <label>AreaCodeUSPS</label>
    <length>55</length>
    <type>Text</type>
</CustomField>