force-app/main/default/objects/ZipCodeLatAndLong__c/fields/CarrierRouteRateSortation__c.field-meta.xml
<CustomField>
    <fullName>CarrierRouteRateSortation__c</fullName>
    <description>USPS File: Identifies where automation Carrier Route rates are available.</description>
    <label>CarrierRouteRateSortation</label>
    <length>1</length>
    <type>Text</type>
</CustomField>