force-app/main/default/objects/ZipCodeLatAndLong__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This stored the City.</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>