force-app/main/default/objects/ZipCodeLatAndLong__c/fields/City_State__c.field-meta.xml
<CustomField>
    <fullName>City_State__c</fullName>
    <formula>City__c + &quot;,&quot; + State__c</formula>
    <label>City State</label>
    <type>Text</type>
</CustomField>