force-app/main/default/objects/ZipCodeLatAndLong__c/fields/CityAliasAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>CityAliasAbbreviation__c</fullName>
    <description>USPS File: 13 Character abbreviation for the city alias name.</description>
    <label>CityAliasAbbreviation</label>
    <length>13</length>
    <type>Text</type>
</CustomField>