force-app/main/default/objects/ZipCodeLatAndLong__c/fields/CityAliasCode__c.field-meta.xml
<CustomField>
    <fullName>CityAliasCode__c</fullName>
    <description>USPS file: Code indication the type of the city alias name for this record. Record can be Abbreviations, Universities, Government, and more.</description>
    <label>CityAliasCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>