force-app/main/default/objects/ZipCodeLatAndLong__c/fields/CityAliasMixedCase__c.field-meta.xml
<CustomField>
    <fullName>CityAliasMixedCase__c</fullName>
    <description>USPS file: The city alias name in mixed case (i.e. Not in all uppercase letters).</description>
    <label>CityAliasMixedCase</label>
    <length>35</length>
    <type>Text</type>
</CustomField>