force-app/main/default/objects/ZipCodeLatAndLong__c/fields/CityAliasName__c.field-meta.xml
<CustomField>
    <fullName>CityAliasName__c</fullName>
    <description>USPS file:Alias name of the city if it exists.</description>
    <label>CityAliasName</label>
    <length>35</length>
    <type>Text</type>
</CustomField>