force-app/main/default/objects/ZipCodeLatAndLong__c/fields/CityDeliveryIndicator__c.field-meta.xml
<CustomField>
    <fullName>CityDeliveryIndicator__c</fullName>
    <description>USPS file: Specifies whether or not a post office has city-delivery carrier routes.</description>
    <label>CityDeliveryIndicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>