force-app/main/default/objects/ZipCodeLatAndLong__c/fields/CityMixedCase__c.field-meta.xml
<CustomField>
    <fullName>CityMixedCase__c</fullName>
    <description>USPS file: The city name in mixed case (i.e. Not in all uppercase letters).</description>
    <label>CityMixedCase</label>
    <length>35</length>
    <type>Text</type>
</CustomField>