force-app/main/default/objects/ZipCodeLatAndLong__c/fields/CityStateKey__c.field-meta.xml
<CustomField>
    <fullName>CityStateKey__c</fullName>
    <description>Links this record with other products ZIP-Codes.com offers such as the ZIP+4.</description>
    <label>CityStateKey</label>
    <length>6</length>
    <type>Text</type>
</CustomField>