force-app/main/default/objects/ZipCodeLatAndLong__c/fields/CityType__c.field-meta.xml
<CustomField>
    <fullName>CityType__c</fullName>
    <description>USPS file - Indicates the type of locale such as Post Office, Stations, or Branch.</description>
    <label>CityType</label>
    <length>1</length>
    <type>Text</type>
</CustomField>