force-app/main/default/objects/ZipCodeLatAndLong__c/fields/ClassificationCode__c.field-meta.xml
<CustomField>
    <fullName>ClassificationCode__c</fullName>
    <description>USPS File:The classification type of this ZIP Code.</description>
    <label>ClassificationCode</label>
    <length>1</length>
    <type>Text</type>
</CustomField>