force-app/main/default/objects/ZipCodeLatAndLong__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>This stored the County</description>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>