force-app/main/default/objects/ZipCodeLatAndLong__c/fields/CountyANSI__c.field-meta.xml
<CustomField>
    <fullName>CountyANSI__c</fullName>
    <description>USPS file: ANSI code for the County/Parish this ZIP Code resides in.</description>
    <label>CountyANSI</label>
    <length>3</length>
    <type>Text</type>
</CustomField>