force-app/main/default/objects/ZipCodeLatAndLong__c/fields/CountyFIPS__c.field-meta.xml
<CustomField>
    <fullName>CountyFIPS__c</fullName>
    <description>USPS file: FIPS code for the County/Parish this ZIP Code resides in.</description>
    <label>CountyFIPS</label>
    <length>3</length>
    <type>Text</type>
</CustomField>