force-app/main/default/objects/ZipCodeLatAndLong__c/fields/DayLightSaving__c.field-meta.xml
<CustomField>
    <fullName>DayLightSaving__c</fullName>
    <description>USPS File: Flag indicating whether this ZIP Code observes daylight savings.</description>
    <label>DayLightSaving</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>