force-app/main/default/objects/ZipCodeLatAndLong__c/fields/Elevation__c.field-meta.xml
<CustomField>
    <fullName>Elevation__c</fullName>
    <description>USPS file: The average elevation of the county.</description>
    <label>Elevation</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>