force-app/main/default/objects/ZipCodeLatAndLong__c/fields/FacilityCode__c.field-meta.xml
<CustomField>
    <fullName>FacilityCode__c</fullName>
    <description>USPS file: The type of locale identified in the city/state name.</description>
    <label>FacilityCode</label>
    <length>1</length>
    <type>Text</type>
</CustomField>