force-app/main/default/objects/ZipCodeLatAndLong__c/fields/FinanceNumber__c.field-meta.xml
<CustomField>
    <fullName>FinanceNumber__c</fullName>
    <description>USPS file: A code assigned to Postal Service facilities.</description>
    <label>FinanceNumber</label>
    <length>6</length>
    <type>Text</type>
</CustomField>