force-app/main/default/objects/ZipCodeLatAndLong__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>This stored the latitude.</description>
    <label>Latitude</label>
    <length>12</length>
    <type>Text</type>
</CustomField>