force-app/main/default/objects/ZipCodeLatAndLong__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>This stored Longitude</description>
    <label>Longitude</label>
    <length>12</length>
    <type>Text</type>
</CustomField>