force-app/main/default/objects/ZipCodeLatAndLong__c/fields/MultiCounty__c.field-meta.xml
<CustomField>
    <fullName>MultiCounty__c</fullName>
    <description>USPS file: Flag indicating whether this ZIP Code crosses county lines.</description>
    <label>MultiCounty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>