force-app/main/default/objects/ZipCodeLatAndLong__c/fields/PreferredLastLineKey__c.field-meta.xml
<CustomField>
    <fullName>PreferredLastLineKey__c</fullName>
    <description>USPS file: Links this record with other products ZIP-Codes.com offers.</description>
    <label>PreferredLastLineKey</label>
    <length>10</length>
    <type>Text</type>
</CustomField>