force-app/main/default/objects/ZipCodeLatAndLong__c/fields/PrimaryRecord__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRecord__c</fullName>
    <description>USPS file: Character ‘P’ denoting if this row is a Primary Record or not. Absence of character denotes a non-primary record.</description>
    <label>PrimaryRecord</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>