force-app/main/default/objects/ZipCodeLatAndLong__c/fields/RWS_Region__c.field-meta.xml
<CustomField>
    <fullName>RWS_Region__c</fullName>
    <description>This stored RWS Region</description>
    <label>RWS Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>