force-app/main/default/objects/ZipCodeLatAndLong__c/fields/RWS_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>RWS_Region_Code__c</fullName>
    <description>This stores the RWS Region Code</description>
    <label>RWS Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>