force-app/main/default/objects/ZipCodeLatAndLong__c/fields/RWS_Territory__c.field-meta.xml
<CustomField>
    <fullName>RWS_Territory__c</fullName>
    <description>This stores RWS Territory.</description>
    <label>RWS Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>