force-app/main/default/objects/ZipCodeLatAndLong__c/fields/StateANSI__c.field-meta.xml
<CustomField>
    <fullName>StateANSI__c</fullName>
    <description>USPS file: ANSI code for the State this ZIP Code resides in.</description>
    <label>StateANSI</label>
    <length>2</length>
    <type>Text</type>
</CustomField>