force-app/main/default/objects/ZipCodeLatAndLong__c/fields/StateFIPS__c.field-meta.xml
<CustomField>
    <fullName>StateFIPS__c</fullName>
    <description>USPS file: FIPS code for the State this ZIP Code resides in.</description>
    <label>StateFIPS</label>
    <length>3</length>
    <type>Text</type>
</CustomField>