force-app/main/default/objects/ZipCodeLatAndLong__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <description>USPS file: Hours past Greenwich Time Zone this ZIP Code belongs to.</description>
    <label>TimeZone</label>
    <length>2</length>
    <type>Text</type>
</CustomField>