force-app/main/default/objects/ZipCodeLatAndLong__c/fields/UniqueZIPName__c.field-meta.xml
<CustomField>
    <fullName>UniqueZIPName__c</fullName>
    <description>file: Field that specifies whether the City State Record contains the organization name for a unique ZIP Code.</description>
    <label>UniqueZIPName</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>