force-app/main/default/objects/ZipCodeLatAndLong__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <description>External Id field used for upserts</description>
    <externalId>true</externalId>
    <label>Zipcode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>